testsuite/bsc.typechecker/typeclasses/ATFInInstHeadSynonymBoth.bs.bsc-out.expected
checking package dependencies
compiling ATFInInstHeadSynonymBoth.bs
Error: "ATFInInstHeadSynonymBoth.bs", line 18, column 20: (T0156)
  Type function `Elem' cannot be used in an instance head
Error: "ATFInInstHeadSynonymBoth.bs", line 18, column 29: (T0156)
  Type function `ATFInInstHeadSynonymBoth.Elem' cannot be used in an instance
  head
